<resources>
    <string name="app_name">Yournal</string>
    <string name="action_settings">Settings</string>
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_signup">Create account</string>
    <string name="login_loading">Signing in</string>
    <string name="error_empty_field">Some field is missing</string>
    <string name="register_repeat">Repeat password</string>
    <string name="error_unmatch">Passwords don\'t match</string>
    <string name="signup_loading">Signing up</string>
    <string name="action_logout">Logout</string>
    <string name="title_welcome">Welcome, %1$s!</string>
    <string name="note_title">Title</string>
    <string name="note_body">Body</string>
    <string name="title_activity_note">Add/Edit note</string>
    <string name="title_activity_note_add">Add note</string>
    <string name="title_activity_note_edit">Edit note</string>

    <string name="confirm_title">Confirm delete</string>
    <string name="confirm_message">Are you sure you want to delete?</string>
    <string name="confirm_delete">Delete</string>
    <string name="confirm_cancel">Cancel</string>
    <string name="title_activity_viewer">ViewerActivity</string>
    <string name="about_title">About</string>
    <string name="about_message"><b>Copyright © 2020</b> Iván Ávalos</string>
    <string name="loading_notes">Loading</string>
    <string name="error_wifi">No Internet connection</string>
    <string name="error_wifi_message">Error retrieving information from server</string>
    <string name="desc_options">Options</string>
    <string name="desc_edit">Edit</string>
    <string name="desc_delete">Delete</string>
    <string name="link_website"><a href="https://yournal.avalos.me">https://yournal.avalos.me</a></string>
    <string name="note_add">Add</string>
    <string name="note_edit">Edit</string>
    <string name="note_delete">Delete</string>
    <string name="about_website">Website</string>
</resources>
