<?xml version="1.0" encoding="utf-8"?>
<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeLay"
    android:layout_width="match_parent" android:layout_height="wrap_content">
    <!-- Bottom View Start-->
    <!-- android:background="#263238" -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/bottom_wrapper"
        android:background="@color/colorPrimaryDark"
        android:layout_width="180dp"
        android:weightSum="2"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnEdit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_action_edit"
            style="?android:attr/borderlessButtonStyle"
            android:tint="#ffffff"
            android:contentDescription="@string/desc_edit"/>

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_action_delete"
            style="?android:attr/borderlessButtonStyle"
            android:tint="#ffffff"
            android:contentDescription="@string/desc_delete"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <!-- Bottom View End-->

    <!-- Surface View Start -->
    <RelativeLayout
        android:id="@+id/surface_wrapper"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="@color/viewerBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rlData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/btnOpen"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:tint="#000000"
                style="?android:attr/borderlessButtonStyle"
                android:src="@drawable/ic_more"
                android:contentDescription="@string/desc_options"/>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/btnOpen"
                android:textColor="#000000"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTitle"
                android:textColor="#a0a0a0"
                android:textStyle="italic"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@id/rlData"
            android:layout_marginStart="20dp"
            android:background="#cccccc" />

    </RelativeLayout>
    <!-- Surface View End -->
</com.daimajia.swipe.SwipeLayout>